--- a/style.css
+++ b/style.css
@@ -73,10 +73,11 @@ main {
 
 footer {
     position: absolute;
+    margin:0;
     bottom: 0;
     width: 100%;
     height: 3rem; 
-    padding:0 2rem;
+    padding: 0 2rem;
 
 }
 
